<resources>
    <string name="app_name">coded.</string>

    <string name="exploreCodingInBiteSizedPieces">Explore coding in bite-sized pieces</string>
    <string name="learnRealProgrammingInAWayYouCanUnderstand">learn real programming in a way you can understand</string>
    <string name="experienceHowSoftwareIsMade">Experience how software is made</string>
    <string name="soYouCanTakeControlOfYourOwnTechnology">so you can take control of your own technology</string>
    <string name="experimentAndLearn">Experiment and learn</string>
    <string name="thereAreNoMistakesJustOpportunitiesToExplore">there are no mistakes, just opportunities to explore</string>
    <string name="hi">Hi</string>
    <string name="codedAllowsYouToBuildYourFirstProgramsFromBlocksOfCode">coded. allows you to build your first programs from blocks of code</string>
    <string name="whatSMore">what\'s more?</string>
    <string name="buttonBackgroundImage">Background image</string>
    <string name="imReady">I\'m ready!</string>

    <string name="typeMismatchError">Ouch! You can\'t use variable of this type here!</string>
    <string name="arrayOutOFBoundError">Eh? Check indices of the array</string>
    <string name="divisionByZeroError">Oops! Division by zero!</string>
    <string name="wrongStartPositionError">Second start block? Original! </string>
    <string name="lackOfArgumentsError">Well, and who will set missing blocks? Me?</string>
    <string name="variableNotExistError">And where do you expect me to get this variable?</string>
    <string name="wrongOperandError">You shouldn\'t use such operand in this case</string>
    <string name="invalidStringError">Hmm, I can\'t quite understand what do you mean here</string>
    <string name="invalidBlockError"> *CRAAACK* It seems that this block doesn\'t fit here!</string>
    <string name="internalInterpreterError">It is not your fault! Executor did something that it shouldn\'t do</string>

    <string name="project">Project</string>

    <string name="dragAndDropTheComponentToAdd">Drag and drop the component to add</string>
    <string name="close">Close</string>
    <string name="componentType">Component type</string>
    <string name="variables">Variables</string>
    <string name="expressions">Expressions</string>
    <string name="checks">Checks</string>
    <string name="conditions">Conditions</string>
    <string name="logic">Logic</string>
    <string name="loops">Loops</string>
    <string name="actions">Actions</string>
    <string name="menu">Menu</string>

    <string name="start">start</string>
    <string name="console">Console</string>

    <string name="variablesOperators">Variables operators</string>
    <string name="createVariable">create variable</string>
    <string name="variablesList">Variables list</string>
    <string name="variableName">name</string>
    <string name="variableCall">Variable call</string>
    <string name="create">create</string>
    <string name="variable">variable</string>
    <string name="changeVariableType">Change variable type</string>
    <string name="variableType">variable type</string>

    <string name="change">change</string>
    <string name="by">by</string>
    <string name="set">set</string>
    <string name="to">to</string>

    <string name="value">value</string>

    <string name="print">print</string>
    <string name="toConsole">to console</string>
    <string name="consoleActions">Console actions</string>

    <string name="arrayType">array type</string>

    <string name="stringType">String</string>
    <string name="doubleType">Double</string>
    <string name="integerType">Int</string>
    <string name="booleanType">Boolean</string>
    <string name="multidimensionalArrayType">Nested</string>
    <string name="array">array</string>
    <string name="consoleInput">Console input</string>
    <string name="readFromConsole">read from console</string>

    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">•</string>
    <string name="divide">/</string>
    <string name="divideWithRemainder">%</string>
    <string name="number">number</string>

    <string name="greaterThan">&gt;</string>
    <string name="lowerThan">&lt;</string>
    <string name="equal">==</string>
    <string name="nonEqual">!=</string>
    <string name="greaterOrEqualThan">&gt;=</string>
    <string name="lowerOrEqualThan">&lt;=</string>

    <string name="and">&amp;&amp;</string>
    <string name="or">||</string>
    <string name="not">!</string>
    <string name="mathematicalOperators">Mathematical operators</string>
    <string name="logicalOperators">Logical operators</string>
    <string name="notText">"!   "</string>

    <string name="ifString">if</string>
    <string name="conditionsOperators">Conditions operators</string>
    <string name="whileString">while</string>
    <string name="loopsOperators">Loops operators</string>
    <string name="elseString">else</string>

    <string name="arraysOperators">Arrays operators</string>
    <string name="arrays">arrays</string>
    <string name="add">add</string>
    <string name="arrayName">array name</string>
    <string name="get">get</string>
    <string name="index">index</string>
    <string name="thElementFrom">\'th element from</string>
    <string name="getLengthOf">get length of</string>
    <string name="remove">remove</string>
    <string name="from">from</string>
    <string name="consoleText">Console text</string>
    <string name="in">in</string>
    <string name="arrayElement">array element</string>
</resources>