<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentConstraint"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="-16dp"
        android:layout_marginEnd="-20dp"
        android:contentDescription="@string/buttonBackgroundImage"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/firstCard"
        app:layout_constraintStart_toStartOf="@+id/create"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/variable_block"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/create"
        style="@style/buttonBoldText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ellipsize="end"
        android:maxWidth="@dimen/variableBlockMaxWidth"
        android:maxLength="20"
        android:maxLines="0"
        android:singleLine="true"
        android:text="@string/create"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45"
        tools:ignore="TextContrastCheck" />

    <androidx.cardview.widget.CardView
        android:id="@+id/spinnerWrapperCard"
        style="@style/variableNameCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/codeBlockElementsSpacing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/create"
        app:layout_constraintTop_toTopOf="@+id/backgroundImage"
        app:layout_constraintVertical_bias="0.45">

        <Spinner
            android:id="@+id/typeSpinner"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="@dimen/bottomSheetContentHorizontalMargin"
            android:spinnerMode="dialog" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/variable"
        style="@style/buttonBoldText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/codeBlockElementsSpacing"
        android:ellipsize="end"
        android:maxWidth="@dimen/variableBlockMaxWidth"
        android:maxLength="20"
        android:maxLines="0"
        android:singleLine="true"
        android:text="@string/variable"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/spinnerWrapperCard"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45"
        tools:ignore="TextContrastCheck" />

    <androidx.cardview.widget.CardView
        android:id="@+id/firstCard"
        style="@style/variableNameCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/codeBlockElementsSpacing"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/variable"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45">

        <EditText
            android:id="@+id/variableName"
            style="@style/variableNameEditText"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@null"
            android:hint="@string/variableName"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="text"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>