<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/itemsPickingBottomSheetLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet_background"
    android:elevation="12dp"
    android:fitsSystemWindows="false"
    android:nestedScrollingEnabled="true"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <TextView
        android:id="@+id/itemsPickingHeaderText"
        style="@style/boldTextMinimized"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/bottomSheetContentHorizontalMargin"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:text="@string/dragAndDropTheComponentToAdd"
        android:textColor="@color/lightPurple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/itemsPickingxMarkButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:contentDescription="@string/close"
        android:padding="13dp"
        app:layout_constraintBottom_toBottomOf="@+id/itemsPickingHeaderText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/itemsPickingHeaderText"
        app:layout_constraintTop_toTopOf="@+id/itemsPickingHeaderText"
        app:srcCompat="@drawable/ic_xmark"
        app:tint="@color/lightPurple" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/itemsPickingTabLayout"
        style="@style/itemPickingTabLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/bottomSheetContentHorizontalMargin"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="@dimen/bottomSheetContentHorizontalMargin"
        android:contentDescription="@string/componentType"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemsPickingHeaderText"
        app:tabMode="auto"
        app:tabTextAppearance="@style/itemPickingTabLayoutTextAppearance" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/itemsPickingViewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/bottomSheetContentHorizontalMargin"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="@dimen/bottomSheetContentHorizontalMargin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itemsPickingTabLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>