<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueFirst"
    android:fitsSystemWindows="true"
    app:layoutDescription="@xml/activity_onboarding_scene"
    tools:context=".presentation.activities.onboardingActivity.OnboardingActivity">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.viewpager2.widget.ViewPager2>

    <TextView
        android:id="@+id/headerText"
        style="@style/boldText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/onboardingHeaderLeftMargin"
        android:layout_marginEnd="@dimen/onboardingHeaderRightMargin"
        android:layout_marginBottom="16dp"
        android:text="@string/hi"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/bodyText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/bodyText"
        style="@style/semiBoldText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/onboardingBodyLeftMargin"
        android:layout_marginEnd="@dimen/onboardingBodyRightMargin"
        android:text="@string/codedAllowsYouToBuildYourFirstProgramsFromBlocksOfCode"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerText"
        tools:ignore="TextContrastCheck" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/nextButtonWrapper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/nextButtonWrapper"
        style="@style/translucentButtonWrapper"
        android:layout_marginStart="@dimen/onboardingNextButtonLeftMargin"
        android:layout_marginEnd="@dimen/onboardingNextButtonRightMargin"
        android:layout_marginBottom="@dimen/onboardingNextButtonBottomMargin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/backgroundImage"
            style="@style/translucentBackground"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/buttonText"
            style="@style/buttonBoldText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/whatSMore"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.motion.widget.MotionLayout>